--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,41 @@
     <title>Project1_Homepage</title>
    <link rel="stylesheet" href="homepage.css">
   </head>
-  <body style="height: 5000px; width: 5000px">
+  <body>
+    <div class="chapter1" style="height: 70px; width:70px">
+      <p>1</p>
+    </div>
     <div class="first-sentence" style="height: 20px; width: 650px">In his A History of the World War (page 212),Captain Liddell Hart reports that</div>
+    <div class="second-sentence" style="height: 20px; width:500px">a planned offensive by thirteen British divisions, </div>
+    <div class="third-sentence" style="height: 20px; width:400px">He comments that</div>
+    <div class="fourth-sentence" style="height:20px; width:700px">torrential rain caused this delay</div>
+    <div class="fifth-sentence" style="height:20px; width:700px">which lacked any special significance.</div>
+    <div class="sixth-sentence" style="height:20px; width:700px">The following deposition</div>
+    <div class="seventh-sentence" style="height:20px; width:700px">dictated by,</div>
+    <div class="chapter2" style="height: 70px; width:70px">
+      <p>2</p>
+    </div>
+    <div class="writer" style="height:20px; width:700px">By Jorge Luis Borges</div>
+    <div class="eighth-sentence" style="height:20px; width:700px">supported by fourteen hundred artillery pieces,</div>
+    <div class="ninth-sentence" style="height:20px; width:163px">against the German</div>
+    <div class="tenth-sentence" style="height:20px; width:700px">at Serre-Montauban, scheduled for</div>
+    <div class="eleventh-sentence" style="height:20px; width:700px">July 24, 1916, had to be postponed</div>
+    <div class="twelvth-sentence" style="height:20px; width:248px">until the morning of the 29th.</div>
+    <div class="chapter3" style="height: 70px; width:70px">
+      <p>3</p>
+    </div>
+    <div class="thirteenth-sentence" style="height:20px; width: 605px">casts unsuspected light upon this event. The first two pages are missing.</div>
+    <div class="title" style="height:50px; width:600px">
+      <div><span class="garden">THE GARDEN</span></div>
+      <div><span class="of">OF</span></div>
+      <div><span class="forking">FORKING</span></div>
+      <div><span class="paths">PATHS</span></div>
+    </div>
+    <div class="forteenth-sentence" style="height:20px; width: 100px">Dr. Yu Tsun</div>
+    <div class="fifteenth-sentence" style="height:20px; width: 450px"> former teacher of English  at the Tsingtao Hochschule,</div>
+    <div class="sixteenth-sentence" style="height:20px; width: 250px"> read over, and then signed by</div>
+    <div class="chapter4" style="height: 70px; width:70px">
+      <p>4</p>
+    </div>
   </body>
 </html>
