--- a/homepage.html
+++ b/homepage.html
@@ -8,8 +8,10 @@
     <div class="chapter1" style="height: 70px; width:70px">
       <p>1</p>
     </div>
-    <div class="first-sentence" style="height: 20px; width: 650px">In his A History of the World War (page 212),Captain Liddell Hart reports that</div>
-    <div class="second-sentence" style="height: 20px; width:500px">a planned offensive by thirteen British divisions, </div>
+    <div class="div1">
+      <div class="first-sentence" style="height: 20px; width: 800px">In his A History of the World War (page 212),Captain Liddell Hart reports that</div>
+      <div class="second-sentence" style="height: 20px; width:500px">a planned offensive by thirteen British divisions, </div>
+    </div>
     <div class="third-sentence" style="height: 20px; width:400px">He comments that</div>
     <div class="fourth-sentence" style="height:20px; width:700px">torrential rain caused this delay</div>
     <div class="fifth-sentence" style="height:20px; width:700px">which lacked any special significance.</div>
