--- a/homepage.html
+++ b/homepage.html
@@ -5,9 +5,11 @@
    <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
+    <a href="chapter1.html">
     <div class="chapter1" style="height: 70px; width:70px">
       <p>1</p>
     </div>
+    </a>
     <div class="div1">
       <div class="first-sentence" style="height: 20px; width: 800px">In his A History of the World War (page 212),Captain Liddell Hart reports that</div>
       <div class="second-sentence" style="height: 20px; width:500px">a planned offensive by thirteen British divisions, </div>
@@ -17,9 +19,11 @@
     <div class="fifth-sentence" style="height:20px; width:700px">which lacked any special significance.</div>
     <div class="sixth-sentence" style="height:20px; width:700px">The following deposition</div>
     <div class="seventh-sentence" style="height:20px; width:700px">dictated by,</div>
+    <a href="chapter2.html">
     <div class="chapter2" style="height: 70px; width:70px">
       <p>2</p>
     </div>
+    </a>
     <div class="writer" style="height:20px; width:700px">By Jorge Luis Borges</div>
     <div class="eighth-sentence" style="height:20px; width:700px">supported by fourteen hundred artillery pieces,</div>
     <div class="ninth-sentence" style="height:20px; width:200px">against the German</div>
