--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Project1_Homepage</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="homepage.css">
   </head>
   <body>
@@ -30,9 +31,11 @@
     <div class="tenth-sentence" style="height:20px; width:700px">at Serre-Montauban, scheduled for</div>
     <div class="eleventh-sentence" style="height:20px; width:700px">July 24, 1916, had to be postponed</div>
     <div class="twelvth-sentence" style="height:20px; width:320px">until the morning of the 29th.</div>
+    <a href="chapter3.html">
     <div class="chapter3" style="height: 70px; width:70px">
       <p>3</p>
     </div>
+    </a>
     <div class="thirteenth-sentence" style="height:20px; width: 675px">casts unsuspected light upon this event. The first two pages are missing.</div>
     <div class="title" style="height:50px; width:600px">
       <div><span class="garden">THE GARDEN</span></div>
@@ -46,5 +49,6 @@
     <div class="chapter4" style="height: 70px; width:70px">
       <p>4</p>
     </div>
+    <script>window.scrollTo(1000, 1000);</script>
   </body>
 </html>
