--- a/homepage.html
+++ b/homepage.html
@@ -46,9 +46,11 @@
     <div class="forteenth-sentence" style="height:20px; width: 105px">Dr. Yu Tsun</div>
     <div class="fifteenth-sentence" style="height:20px; width: 500px"> former teacher of English  at the Tsingtao Hochschule,</div>
     <div class="sixteenth-sentence" style="height:20px; width: 300px"> read over, and then signed by</div>
+    <a href="chapter4.html">
     <div class="chapter4" style="height: 70px; width:70px">
       <p>4</p>
     </div>
-    <script>window.scrollTo(1000, 1000);</script>
+    </a>
+    <script>window.scrollTo(1200, 1000);</script>
   </body>
 </html>
